# one

./: .gitignore  LICENSE  README.md  config.toml  main.py  pyproject.toml
client/: package.json
helpers/: ConfigParser.py
learn/: learn_celery.py  learn_celery_client.py  learn_docker.py  learn_fastapi.py  learn_odmantic.py  learn_starlette.py  learn_toml.py  learn_uvicorn.py  learn_websockets.py
protos/: hello.proto
server/: app.py
server/api/: __init__.py  actions.py
