[tool.poetry]
name = "one"
version = "0.1.0"
description = ""
authors = ["Andy <open@zhishimao.cn>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.68.1"
PyJWT = "2.1.0"
toml = "0.10.2"
mongoengine = "^0.23.1"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
