[tool.poetry]
name = "one"
version = "0.1.0"
description = ""
authors = ["Andy <open@zhishimao.cn>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.68.1"
PyJWT = "2.1.0"
mongoengine = "^0.23.1"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
odmantic = "^0.3.5"
websockets = "^10.0"
celery = "^5.1.2"
aiofiles = "^0.7.0"
docker = "^5.0.2"
pika = "^1.2.0"
redis = "^3.5.3"
flower = "^1.0.0"
grpcio = "^1.40.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pytest = "^6.2.5"
grpcio-tools = "^1.40.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
